# ImagineTasks

./: CMakeLists.txt  README.md  main.cpp
pangrams/: CMakeLists.txt
pangrams/src/: Pangrams.cpp  Pangrams.hpp
pangrams/test/: PangramsTest.cpp
particles/: CMakeLists.txt
particles/src/: Particles.cpp  Particles.hpp
particles/test/: ParticlesTest.cpp
rotation/: CMakeLists.txt
rotation/src/: Rotation.cpp  Rotation.hpp
rotation/test/: RotationTest.cpp
